tests/errors/syn_err07.kt
// unmatched parenthesis error
val x = (10 + 5